--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,10 +18,10 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-12 col-xl-5 col-xxl-10">
+  <div class="col-lg-12 col-xl-5 col-xxxl-10">
     <app-top-accounts></app-top-accounts>
   </div>
-  <div class="col-lg-12 col-xl-7 col-xxl-14">
+  <div class="col-lg-12 col-xl-7 col-xxxl-14">
     <app-blocks-won limit=10></app-blocks-won>
   </div>
 </div>
