--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -16,9 +16,9 @@
   </div>
   <div class="col-12" *ngIf="accountService.havePoolPublicKey && accountService.haveAccount">
     <div class="row">
-      <div class="p-1 col-md-12 col-lg-9 col-xxl-20">
+      <div class="p-1 col-md-12 col-lg-9 col-xxxl-20">
         <div class="row row-without-margin">
-          <div class="p-1 col-md-6 col-lg-6 col-xxl-6">
+          <div class="p-1 col-md-6 col-lg-6 col-xxxl-6">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>{{snippetService.getSnippet('my-farmer-component.pending-balance-card.title')}}</h5>
@@ -37,7 +37,7 @@
               ></ngb-progressbar>
             </div>
           </div>
-          <div class="p-1 col-md-6 col-lg-6 col-xxl-6">
+          <div class="p-1 col-md-6 col-lg-6 col-xxxl-6">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>{{snippetService.getSnippet('my-farmer-component.estimated-daily-reward-card.title')}}</h5>
@@ -53,7 +53,7 @@
               </div>
             </div>
           </div>
-          <div class="p-1 col-md-6 col-lg-6 col-xxl-6">
+          <div class="p-1 col-md-6 col-lg-6 col-xxxl-6">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>Average Effective Capacity</h5>
@@ -69,7 +69,7 @@
               </div>
             </div>
           </div>
-          <div class="p-1 col-md-6 col-lg-6 col-xxl-6">
+          <div class="p-1 col-md-6 col-lg-6 col-xxxl-6">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>{{snippetService.getSnippet('my-farmer-component.last-partial-accepted-card.title')}}</h5>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="row row-without-margin">
-          <div class="p-1 col-md-12 col-lg-6 col-xxl-12">
+          <div class="p-1 col-md-12 col-lg-6 col-xxxl-12">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>{{snippetService.getSnippet('my-farmer-component.payout-address-card.title')}}</h5>
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div class="p-1 col-md-12 col-lg-6 col-xxl-12">
+          <div class="p-1 col-md-12 col-lg-6 col-xxxl-12">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5> {{snippetService.getSnippet('my-farmer-component.pool-public-key-card.title')}}</h5>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="row row-without-margin">
-          <div class="p-1 col-md-4 col-lg-4 col-xxl-6" *ngIf="accountService.account.collateral">
+          <div class="p-1 col-md-4 col-lg-4 col-xxxl-6" *ngIf="accountService.account.collateral">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>{{snippetService.getSnippet('my-farmer-component.collateral-balance-card.title')}}</h5>
@@ -128,7 +128,7 @@
               ></ngb-progressbar>
             </div>
           </div>
-          <div class="p-1 col-md-3 col-lg-3 col-xxl-6">
+          <div class="p-1 col-md-3 col-lg-3 col-xxxl-6">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>{{snippetService.getSnippet('my-farmer-component.difficulty-card.title')}}</h5>
@@ -138,7 +138,7 @@
               </div>
             </div>
           </div>
-          <div class="p-1 col-md-3 col-lg-3 col-xxl-6">
+          <div class="p-1 col-md-3 col-lg-3 col-xxxl-6">
             <div class="card">
               <div class="card-header text-align-center">
                 <h5>Current Effort</h5>
@@ -156,7 +156,7 @@
           </div>
         </div>
       </div>
-      <div class="p-1 col-md-12 col-lg-3 col-xxl-4">
+      <div class="p-1 col-md-12 col-lg-3 col-xxxl-4">
         <div class="row row-without-margin">
           <div class="p-1 col-12">
             <div class="card">
