--- a/src/app/currency-selector/currency-selector.component.scss
+++ b/src/app/currency-selector/currency-selector.component.scss
@@ -1,7 +1,7 @@
 .currency-select {
   scrollbar-width: thin;
   scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
-  width: 5em;
+  max-width: 5rem;
 }
 .currency-select::-webkit-scrollbar {
   width: 6px;
