--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -236,19 +236,19 @@
                 <h5 style="font-weight: bold">Shares</h5>
               </div>
               <div class="row ps-5 pe-3">
-                <div class="col-4">
+                <div class="col-12 col-sm-4 shares-box">
                   <div class="p-2 border border-primary rounded">
                     <h5 class="mb-1 fw-lighter">Valid Shares</h5>
                     <h4>{{totalValidShares | async}} <span class="shares-box-percentage">({{totalValidSharesPercentage | async}}%)</span></h4>
                   </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-4 shares-box">
                   <div class="p-2 border border-primary rounded">
                     <h5 class="mb-1 fw-lighter">Stale Shares</h5>
                     <h4>{{totalStaleShares | async}} <span class="shares-box-percentage">({{totalStaleSharesPercentage | async}}%)</span></h4>
                   </div>
                 </div>
-                <div class="col-4">
+                <div class="col-12 col-sm-4 shares-box">
                   <div class="p-2 border border-primary rounded">
                     <h5 class="mb-1 fw-lighter">Invalid Shares</h5>
                     <h4>{{totalInvalidShares | async}} <span class="shares-box-percentage">({{totalInvalidSharesPercentage | async}}%)</span></h4>
