--- a/src/app/leave-pool-modal/leave-pool.component.html
+++ b/src/app/leave-pool-modal/leave-pool.component.html
@@ -24,7 +24,7 @@
 </div>
 <div class="row mt-2">
   <div class="col-12">
-    <button type="button" class="btn btn-success w-100" (click)="leaveThePool()" [disabled]="accountService.isUpdatingAccount || accountService.isLeavingPool">
+    <button type="button" class="btn btn-danger w-100" (click)="leaveThePool()" [disabled]="accountService.isUpdatingAccount || accountService.isLeavingPool">
       <span *ngIf="accountService.isLeavingPool">{{snippetService.getSnippet('leave-pool-modal.leaving')}}</span>
       <span *ngIf="!accountService.isLeavingPool">{{snippetService.getSnippet('leave-pool-modal.leave')}}</span>
       <fa-icon [icon]="faCircleNotch" [spin]="true" *ngIf="accountService.isLeavingPool" style="margin-top: 5px; margin-left: 0.8em"></fa-icon>
