--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -17,8 +17,13 @@
   <div class="col-12" *ngIf="accountService.havePoolPublicKey && accountService.haveAccount">
     <div class="row mb-1">
       <div class="col-12 col-md">
-        <h4 *ngIf="accountService.account.name !== undefined" class="mb-0 fw-light fs-2">{{accountService.account.name}}</h4>
-        <span class="fw-light fs-5 text-break">{{accountService.account.poolPublicKey}}</span>
+        <div>
+          <span *ngIf="accountService.account.name !== undefined" class="mb-0 fw-light fs-2">{{accountService.account.name}}</span>
+          <img *ngIf="tenureRankInfo" ngSrc="assets/tenure-ranks/{{tenureRankInfo.imageFileName}}" height="32" width="32" [alt]="tenureRankInfo.imageAlt" [ngbTooltip]="tenureRankInfo.imageAlt" class="ms-2" style="margin-top: -0.8em">
+          <img *ngIf="capacityRankInfo" ngSrc="assets/capacity-ranks/{{capacityRankInfo.imageFileName}}" height="32" width="32" [alt]="capacityRankInfo.imageAlt" [ngbTooltip]="capacityRankInfo.imageAlt" class="ms-2" style="margin-top: -0.8em">
+          <img *ngIf="joinedFirstYear" ngSrc="assets/joined-first-year.png" height="32" width="32" alt="Year 1 member" ngbTooltip="Year 1 member" class="ms-2" style="margin-top: -0.8em">
+        </div>
+        <div class="fw-light fs-5 text-break">{{accountService.account.poolPublicKey}}</div>
       </div>
       <div class="col-12 col-md-auto my-auto action-box" *ngIf="!accountService.haveAuthToken">
         <button class="btn btn-success" (click)="authenticate()">{{snippetService.getSnippet('my-farmer-component.manage-account-card.authenticate')}}</button>
